[gd_scene load_steps=4 format=3 uid="uid://yfwrry6uh2ty"]

[ext_resource type="Script" uid="uid://da2xaj43rc3qb" path="res://Scripts/settings.gd" id="1_4geyq"]
[ext_resource type="FontFile" uid="uid://b0l6clpjwwmvw" path="res://Assets/fonts/UrbanRiotDEMO-B85.ttf" id="2_i44u3"]
[ext_resource type="Texture2D" uid="uid://cirk165vwns0j" path="res://Assets/ui/Settings.png" id="3_lhmql"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_4geyq")

[node name="Fondo" type="ColorRect" parent="."]
z_index = 99
anchors_preset = -1
anchor_right = 0.09
anchor_bottom = 0.148
offset_left = 296.0
offset_top = 95.99997
offset_right = 245.65334
offset_bottom = 23.747017
scale = Vector2(10.5, 10.5)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
z_index = 99
offset_left = 384.0
offset_top = 232.0
offset_right = 759.0
offset_bottom = 331.0
theme_override_fonts/font = ExtResource("2_i44u3")
theme_override_font_sizes/font_size = 72
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonSalir" type="TextureButton" parent="."]
z_index = 99
offset_left = 416.0
offset_top = 464.0
offset_right = 707.0
offset_bottom = 617.0
texture_normal = ExtResource("3_lhmql")

[node name="SliderVolumen" type="HSlider" parent="."]
z_index = 99
offset_left = 416.0
offset_top = 376.0
offset_right = 720.0
offset_bottom = 392.0
max_value = 1.5
step = 0.001
value = 1.0

[node name="base" type="ColorRect" parent="."]
z_index = 10
offset_right = 1360.0
offset_bottom = 952.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6862745)

[node name="LabelVolumen" type="Label" parent="."]
z_index = 99
offset_left = 336.0
offset_top = 368.0
offset_right = 408.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("2_i44u3")
theme_override_font_sizes/font_size = 32
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSalir" type="Label" parent="."]
z_index = 99
offset_left = 472.0
offset_top = 504.0
offset_right = 664.0
offset_bottom = 580.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_i44u3")
theme_override_font_sizes/font_size = 48
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="BotonSalir" to="." method="_on_boton_salir_mouse_entered"]
[connection signal="mouse_exited" from="BotonSalir" to="." method="_on_boton_salir_mouse_exited"]
[connection signal="pressed" from="BotonSalir" to="." method="_on_boton_salir_pressed"]
[connection signal="value_changed" from="SliderVolumen" to="." method="_on_slider_volumen_value_changed"]
